# amico

./: .gitignore  ARCHITECTURE.md  Amico.example.toml  CONTRIBUTING.md  Cargo.toml  Cross.toml  IMPROVEMENT_SUMMARY.md  LICENSE  LICENSE-Apache-2.0  README.md  amico-core-improvements.md  pkglist-deb.txt  pkglist-pacman.txt
amico/: Cargo.toml  README.md
amico-core/: Cargo.toml  README.md
amico-core/core-macros/: Cargo.toml
amico-core/core-macros/src/: lib.rs
amico-core/src/: agent.rs  ecs.rs  error.rs  lib.rs  prompt.rs  std.rs  task.rs
amico-core/src/agent/: agent.rs
amico-core/src/config/: agent.rs  amico_config.rs  builtin.rs  config_trait.rs  core.rs  error.rs  event.rs  interface.rs  mod.rs  params.rs  provider.rs  runtime.rs
amico-core/src/config/core/: agent.rs  core_config.rs  event.rs  event_config.rs  mod.rs  provider.rs  runtime.rs
amico-core/src/controller/: agent.rs
amico-core/src/entities/: action.rs  action_selector.rs  event.rs  event_generator.rs  event_pool.rs  executor.rs  mod.rs  model.rs  selector.rs  tests.rs
amico-core/src/entity/: action.rs  action_selector.rs  event.rs  event_generator.rs  mod.rs
amico-core/src/errors/: action_errors.rs  action_selector_errors.rs  agent_event.rs  event_pool.rs  event_pool_errors.rs  mod.rs
amico-core/src/event/: event.rs  event_trait.rs  mod.rs
amico-core/src/events/: bus.rs  handler.rs  mod.rs  types.rs
amico-core/src/factory/: action_selector_factory.rs  event_generator_factory.rs  mod.rs
amico-core/src/plugin/: error.rs  interface.rs  mod.rs  pool.rs  tests.rs
amico-core/src/prompt/: mod.rs  prompt.rs
amico-core/src/runtime/: storage.rs
amico-core/src/traits/: action.rs  action_selector.rs  dispatcher.rs  event_generator.rs  event_source.rs  handlers.rs  mod.rs  resource.rs  responder.rs  strategy.rs  system.rs
amico-core/src/types/: agent_event.rs  control.rs  event_pool.rs  instruction.rs  interaction.rs  mod.rs  res_map.rs
amico-core/src/world/: delegate.rs  handler.rs  manager.rs  mod.rs
amico-core/tests/: strategy_interaction.rs  test_agent.rs
amico-core/tests/config/: example.toml  minimal.toml
amico-hal/: Cargo.toml  README.md
amico-hal/src/: lib.rs
amico-hal/src/interface/: audio.rs  mod.rs
amico-hal/src/os/: mod.rs
amico-models/: Cargo.toml
amico-models/src/: lib.rs  openai.rs
amico-mods/: Cargo.toml  README.md
amico-mods/src/: interface.rs  lib.rs
amico-mods/src/a2a/: crypto.rs  mod.rs
amico-mods/src/a2a/network/: dephy.rs  error.rs  interface.rs  mod.rs
amico-mods/src/aoe/: mod.rs
amico-mods/src/interface/: mod.rs  provider.rs
amico-mods/src/interface/core/: action_selector.rs  event_generator.rs
amico-mods/src/plugin_manager/: storage.rs
amico-mods/src/runtime/storage/: fs.rs  in_mem.rs  mod.rs
amico-mods/src/std/: mod.rs
amico-mods/src/std/ai/: mod.rs  session.rs
amico-mods/src/std/core/: action_selector.rs  event_generator.rs  event_pool.rs  mod.rs  model.rs
amico-mods/src/web3/: mod.rs  wallet.rs
amico-mods/src/web3/ethereum/: wallet.rs
amico-mods/src/web3/resources/: wallet.rs
amico-mods/src/web3/solana/: balance.rs  client.rs  mod.rs  resources.rs  trade.rs  wallet.rs
amico-openai/: Cargo.toml
amico-openai/src/: lib.rs
amico-plugin/: Cargo.toml
amico-plugin/src/: lib.rs
amico-plugins/: Cargo.toml
amico-plugins/src/: lib.rs
amico-plugins/src/interface/: mod.rs  plugin.rs  provider.rs
amico-plugins/src/interface/core/: mod.rs
amico-plugins/src/plugin_manager/: mod.rs  storage.rs
amico-plugins/src/std/: action_selector.rs  event_generator.rs  mod.rs  service.rs
amico-plugins/src/std/action_selector/: action_selector.rs  mod.rs
amico-plugins/src/std/core/: action_selector.rs  event_generator.rs  mod.rs  model.rs  tests.rs
amico-plugins/src/std/providers/: openai.rs
amico-runtime/: Cargo.toml
amico-runtime/src/: context.rs  fs_store.rs  lib.rs  message.rs  runtime.rs  scheduler.rs  step.rs  workflow.rs
amico-sdk/: Cargo.toml  README.md
amico-sdk/src/: aoe.rs  environment.rs  lib.rs  resource.rs  task.rs
amico-sdk/src/a2a/: network.rs
amico-sdk/src/ai/: chat.rs  completion.rs  embedding.rs  errors.rs  executor.rs  message.rs  mod.rs  model.rs  provider.rs  service.rs  tool.rs
amico-sdk/src/ai/completion/: error.rs  mod.rs  model.rs  session.rs
amico-sdk/src/ai/mcp/: client.rs  mod.rs  test_server.rs  tests.rs  tool.rs
amico-sdk/src/ai/models/: completion.rs  mod.rs
amico-sdk/src/ai/services/: completion.rs
amico-sdk/src/core/: action_map.rs  ai_action.rs  mod.rs  model.rs
amico-sdk/src/runtime/: storage.rs
amico-system/: Cargo.toml
amico-system/src/: effect.rs  lib.rs  permission.rs  platform.rs  shell.rs  stream.rs  tool.rs
amico-wasm/: Cargo.toml  README.md
amico-wasm/example/: README.md  package.json  pnpm-lock.yaml  vite.config.js
amico-wasm/example/src/: App.jsx
amico-wasm/src/: lib.rs  log.rs  tests.rs
amico-workflows/: Cargo.toml
amico-workflows/src/: chain.rs  lib.rs  react.rs  reflection.rs  tool_loop.rs
amico/src/: audio.rs  event.rs  helpers.rs  lib.rs  main.rs  prompt.rs  tools.rs  wallets.rs
amico/src/actions/: mod.rs  print_action.rs
amico/src/config/: config.toml
amico/src/engine/: a2a.rs  actions.rs  agent.rs  components.rs  dispatcher.rs  event_source.rs  events.rs  interaction.rs  mod.rs  strategy.rs  systems.rs
amico/src/impls/: action_selector_impl.rs  event_generator_impl.rs  mod.rs
amico/src/tasks/: cli.rs  interface.rs  mod.rs
amico/src/tasks/audio/: control.rs  mod.rs  speech.rs  task.rs
amico/src/tasks/pulseaudio/: mod.rs  pulseaudio.rs
amico/src/tools/: balance.rs  create_asset.rs  mod.rs  search.rs  trade.rs
amico/src/utils/: aptos.rs  eth.rs  mod.rs  sol_swap.rs  solana.rs
code-gen/auto-trait/: Cargo.toml
code-gen/auto-trait/src/: lib.rs
code-gen/auto-trait/tests/: macro_test.rs
examples/agent-daemon/: Cargo.toml
examples/agent-daemon/src/: handler.rs  main.rs  model.rs  session.rs  tool.rs  transport.rs
examples/agent-tui/: Cargo.toml
examples/agent-tui/src/: api.rs  app.rs  main.rs  ui.rs
(+35 files in other folders)
