[workspace]
members = ["amico", "amico-*"]
resolver = "2"

[workspace.dependencies]
thiserror = "2.0.12"
serde = "1.0.219"
serde_json = "1.0.140"
async-trait = "0.1.88"
tokio = "1.44.2"
rig-core = { version = "0.12.0", default-features = false }
tracing = "0.1.41"
solana-sdk = "2.1.21"
solana-client = "2.1.21"
anyhow = "1.0.98"
evenio = "0.6.0"
nostr-sdk = "0.38.0"
nostr = "0.38.0"
