[workspace]
members = [
    "amico",
    "amico-models",
    "amico-system",
    "amico-runtime",
    "amico-plugin",
    "amico-workflows",
]
resolver = "2"

[workspace.dependencies]
# Amico V2 crates
amico-models = { path = "./amico-models", version = "2.0.0" }
amico-system = { path = "./amico-system", version = "2.0.0" }
amico-runtime = { path = "./amico-runtime", version = "2.0.0" }
amico-plugin = { path = "./amico-plugin", version = "2.0.0" }
amico-workflows = { path = "./amico-workflows", version = "2.0.0" }

# Core dependencies
futures = "0.3"
tokio = { version = "1.44", default-features = false }
