[package]
name = "amico-core"
version = "0.0.1"
edition = "2021"
description = "The core of the Amico AI Agent Framework"
repository = "https://github.com/AIMOverse/amico"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true, features = ["std"] }
tracing = { workspace = true }
