[package]
name = "amico-core"
version = "1.1.0"
edition = "2024"
description = "The core Agent components of the Amico AI Agent Framework"
repository = "https://github.com/AIMOverse/amico"
license = "MIT OR Apache-2.0"

[features]
default = []
wasm = ["tokio_with_wasm"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true, features = ["std"] }
tracing = { workspace = true }
anyhow = { workspace = true }
evenio = { workspace = true }

# Check: For WASM support, only `sync`, `macros`, `io-util`, `rt` and `time` features are supported
tokio = { workspace = true, features = ["rt", "sync"] }
tokio_with_wasm = { workspace = true, features = ["rt", "sync"], optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "sync", "macros", "time"] }
tracing-subscriber = "0.3.19"
# Enable for tests
tokio_with_wasm = { workspace = true, features = ["rt", "sync"] }
