[package]
name = "amico-hal"
version = "0.0.2"
edition = "2021"
description = "The HAL of the Amico AI Agent Framework"
repository = "https://github.com/AIMOverse/amico"
license = "MIT OR Apache-2.0"

[features]
default = ["os-common"]

# OS common
os-common = [
    "cpal",
    "hound",
    "lame",
    "rodio",
    "dep:tokio",
    "tokio/rt",
    "tokio/macros",
]

# WASM
wasm = []

[dependencies]

# Cross-platform audio dependencies
cpal = { version = "0.15.3", optional = true }
hound = { version = "3.5.1", optional = true }
lame = { version = "0.1.3", optional = true }
rodio = { version = "0.20.1", optional = true }

# Common dependencies
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }
