[package]
name = "amico-mods"
version = "0.0.1"
edition = "2021"
description = "The plugins of the Amico AI Agent Framework"
repository = "https://github.com/AIMOverse/amico"
license = "MIT"

# Control which (static) plugins should be enabled using feature flags
[features]
# By default, the standard set of plugins is enabled
# Temporarily set to full for development
default = ["full"]

# The standard set of plugins
std = ["rig-core"]

# A2A features
a2a = ["amico-sdk/a2a", "sodiumoxide", "base64"]
a2a-dephy = [
    "a2a",
    "nostr-sdk",
    "nostr",
    "web3-solana",
    "dep:tokio",
    "tokio/rt",
]

# Agent of Everything features
aoe = ["amico-sdk/aoe"]
aoe-mqtt = ["aoe"]
aoe-http = ["aoe"]
aoe-bt = ["aoe"]

# Web3 features and tools
web3 = ["tiny-bip39"]
web3-solana = ["web3", "solana-sdk", "solana-client"]
web3-ethereum = ["web3", "alloy"]

# Full features
full = ["std", "a2a-dephy", "web3-solana", "web3-ethereum"]

[dependencies]

# Plugin-specific dependencies
tokio = { version = "1.44.2", optional = true }

# Std
rig-core = { version = "0.12.0", optional = true }

# Web3
tiny-bip39 = { version = "2.0.0", optional = true }
# Solana
solana-sdk = { version = "2.2.1", optional = true }
solana-client = { version = "2.2.3", optional = true }
# Ethereum
alloy = { version = "0.13.0", features = [
    "full",
    "signer-mnemonic",
], optional = true }
# a2a
nostr-sdk = { version = "0.38.0", optional = true }
nostr = { version = "0.38.0", optional = true }
sodiumoxide = { version = "0.2", optional = true }
base64 = { version = "0.22", optional = true }

# Common dependencies
thiserror = "2.0.12"
ecdsa = "0.16.9"
colored = "3.0.0"
reqwest = { version = "0.12.15", features = [
    "json",
    "rustls-tls",
    "multipart",
] }
amico-core = { path = "../amico-core", default-features = false }
amico-sdk = { path = "../amico-sdk", default-features = false }
amico-hal = { path = "../amico-hal", default-features = false }
async-trait = "0.1.86"
lazy_static = "1.5.0"
serde = "1.0.217"
serde_json = "1.0.138"
futures = "0.3.31"
tracing = "0.1.41"

# Testing dependencies
[dev-dependencies]
tempfile = "3.10.1"
