[package]
name = "amico-mods"
version = "0.0.4"
edition = "2021"
description = "The plugins of the Amico AI Agent Framework"
repository = "https://github.com/AIMOverse/amico"
license = "MIT OR Apache-2.0"

# Control which (static) plugins should be enabled using feature flags
[features]
# By default, the standard set of plugins and core plugins are enabled
# Temporarily set to full for development
default = ["full"]

# The standard set of plugins
std-full = ["std-providers", "std-chat-session", "std-tasks"]
std-providers = ["std-providers-rig"]
std-providers-rig = ["rig-core"]
std-chat-session = []
std-tasks = ["std-cli-chatbot", "std-audio-chatbot"]
std-cli-chatbot = []
std-audio-chatbot = ["dep:amico-hal", "amico-hal/os-common"]

# Core plugins
std-core = ["chrono"]

# Runtime
storage-fs = []
storage-in-mem = []

# A2A features
a2a = ["amico-sdk/a2a", "sodiumoxide", "base64"]
a2a-dephy = [
    "a2a",
    "nostr-sdk",
    "nostr",
    "web3-solana",
    "dep:tokio",
    "tokio/rt",
]

# Agent of Everything features
aoe = ["amico-sdk/aoe"]
aoe-mqtt = ["aoe"]
aoe-http = ["aoe"]
aoe-bt = ["aoe"]

# Web3 features and tools
web3 = ["tiny-bip39"]
web3-solana = ["web3", "solana-sdk"]
web3-solana-std = ["web3-solana", "solana-client"]
web3-solana-wasm = ["web3-solana", "wasm_client_solana"]
web3-ethereum = ["web3", "alloy", "ecdsa"]

# WASM
wasm = ["web3-solana-wasm"]

# Full features
full = [
    "std-full",
    "std-core",
    "a2a-dephy",
    "web3-solana-std",
    "web3-solana-wasm",
    "web3-ethereum",
    "wasm",
    "storage-fs",
    "storage-in-mem",
]

[dependencies]
amico-sdk = { workspace = true }
amico-hal = { workspace = true, optional = true }
amico-core = { workspace = true }

# Plugin-specific dependencies

# Core
chrono = { workspace = true, optional = true }

# Std
rig-core = { workspace = true, optional = true, default-features = false }

# Web3 Common
tiny-bip39 = { version = "2.0.0", optional = true }

# Solana
solana-sdk = { workspace = true, optional = true }
solana-client = { workspace = true, optional = true }
wasm_client_solana = { version = "0.8.0", optional = true }

# Ethereum
alloy = { version = "0.15.8", features = [
    "full",
    "signer-mnemonic",
], optional = true }
ecdsa = { version = "0.16.9", optional = true }

# a2a
nostr-sdk = { workspace = true, optional = true }
nostr = { workspace = true, optional = true }
sodiumoxide = { version = "0.2", optional = true }
base64 = { version = "0.22", optional = true }

# Common dependencies
tokio = { workspace = true, optional = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
colored = "3.0.0"
reqwest = { version = "0.12.15", features = [
    "json",
    "rustls-tls",
    "multipart",
] }
lazy_static = "1.5.0"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

# Testing dependencies
[dev-dependencies]
tempfile = "3.10.1"
