[package]
name = "amico-plugin"
version = "2.0.0"
edition = "2021"
description = "Plugin architecture for extending Amico V2 agent capabilities"
repository = "https://github.com/AIMOverse/amico"
license = "MIT OR Apache-2.0"

[dependencies]
# Lower-level Amico layers
amico-system = { path = "../amico-system", version = "2.0.0" }
amico-runtime = { path = "../amico-runtime", version = "2.0.0" }

# Core async runtime
futures = "0.3"

[dev-dependencies]
tokio = { version = "1.44", features = ["rt", "macros"] }
