[package]
name = "amico-plugins"
version = "0.1.0"
edition = "2021"
description = "The plugins of the Amico AI Agent Framework"
repository = "https://github.com/AIMOverse/amico"
license = "MIT"

# Control which (static) plugins should be enabled using feature flags
[features]
# By default, the standard set of plugins is enabled
default = ["std"]

# The standard set of plugins
std = ["rig-core"]

[dependencies]
amico-sdk = { version = "0.0.1" }
async-trait = "0.1.86"
lazy_static = "1.5.0"
rig-core = { version = "0.7.0", optional = true }
serde = "1.0.217"
