[package]
name = "amico-runtime"
version = "2.0.0"
edition = "2021"
description = "Runtime layer for executing workflows in Amico V2"
repository = "https://github.com/AIMOverse/amico"
license = "MIT OR Apache-2.0"

[features]
default = []
fs = ["tokio", "serde", "serde_json", "uuid"]

[dependencies]
# Core async runtime
futures = "0.3"

# Optional: Filesystem session store
tokio = { version = "1.44", features = ["fs", "io-util"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
uuid = { version = "1", features = ["v4"], optional = true }

[dev-dependencies]
tokio = { version = "1.44", features = ["rt", "macros", "fs", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
