[package]
name = "amico-sdk"
version = "0.0.2"
edition = "2024"
description = "The SDK of the Amico AI Agent Framework"
repository = "https://github.com/AIMOverse/amico"
license = "MIT"

[lib]
name = "amico"
path = "src/lib.rs"

[features]
core = ["dep:amico-core"]
default = ["mcp-client", "a2a", "aoe"]
mcp-client = [
    "dep:rig-core",
    "rig-core/mcp",
    "dep:mcp-core",
    "mcp-core/sse",
    "mcp-core-macros",
    "anyhow",
]
a2a = []
aoe = []

[dependencies]
amico-core = { path = "../amico-core", optional = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
rig-core = { workspace = true, optional = true, default-features = false }
mcp-core = { version = "0.1.46", optional = true }
mcp-core-macros = { version = "0.1.22", optional = true }
anyhow = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "time"] }
schemars = "0.8"
solana-sdk = { workspace = true }
