[package]
name = "amico-sdk"
version = "1.0.0"
edition = "2024"
description = "Amico AI Agent Framework core features SDK"
repository = "https://github.com/AIMOverse/amico"
license = "MIT OR Apache-2.0"

[lib]
name = "amico"
path = "src/lib.rs"

[features]
default = ["mcp-client", "a2a", "aoe"]
mcp-client = [
    "dep:rig-core",
    "rig-core/mcp",
    "dep:mcp-core",
    "mcp-core/sse",
    "mcp-core-macros",
]
a2a = []
aoe = []

[dependencies]
async-trait = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
rig-core = { workspace = true, optional = true, default-features = false }
mcp-core = { version = "0.1.46", optional = true }
mcp-core-macros = { version = "0.1.22", optional = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tokio_with_wasm = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "time"] }
schemars = "0.8"
solana-sdk = { workspace = true }
