[package]
name = "amico-wasm"
version = "0.0.1"
edition = "2024"
description = "The WASM bindings of the Amico AI Agent Framework"
repository = "https://github.com/AIMOverse/amico"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.100"
amico-sdk = { path = "../amico-sdk", default-features = false }
amico-mods = { path = "../amico-mods", default-features = false, features = [
    "web3-solana-wasm",
] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
wasm-bindgen-futures = "0.4.50"
js-sys = "0.3.77"
getrandom = { version = "0.2", features = ["js"] }
solana-sdk = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.50"
