[package]
name = "amico-wasm"
version = "0.0.1"
edition = "2024"
description = "The WASM bindings of the Amico AI Agent Framework"
repository = "https://github.com/AIMOverse/amico"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.100"
amico-core = { path = "../amico-core" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
wasm-bindgen-futures = "0.4.50"
#js-sys = "0.3.77"
getrandom = { version = "0.2", features = ["js"] }
#solana-sdk = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["time", "macros", "rt"] }
anyhow = { workspace = true }
evenio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3.19"
tracing-subscriber-wasm = "0.1.0"
tokio_with_wasm = { workspace = true, features = ["rt", "macros", "time"] }
async-trait = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.50"

# For meaningful backtraces
[profile.release]
debug = true
