[package]
name = "amico-workflows"
version = "2.0.0"
edition = "2021"
description = "Preset workflow patterns for Amico V2"
repository = "https://github.com/AIMOverse/amico"
license = "MIT OR Apache-2.0"

[dependencies]
# Internal dependencies
amico-models = { path = "../amico-models", version = "2.0.0" }
amico-runtime = { path = "../amico-runtime", version = "2.0.0" }
amico-system = { path = "../amico-system", version = "2.0.0" }

# Core async runtime
futures = "0.3"

[dev-dependencies]
tokio = { version = "1.44", features = ["rt", "macros"] }
