[package]
name = "amico"
version = "0.0.1"
edition = "2021"
description = "The agent system executable for the Amico AI Agent Framework"
repository = "https://github.com/AIMOverse/amico"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { workspace = true, features = ["full"] }
amico-sdk = { path = "../amico-sdk" }
amico-mods = { path = "../amico-mods" }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3.19"
solana-sdk = { workspace = true }
colored = "3.0.0"
anyhow = { workspace = true }
evenio = { workspace = true }
