[package]
name = "amico"
version = "2.0.0"
edition = "2021"
description = "Amico V2 - A platform-agnostic runtime for AI agents"
repository = "https://github.com/AIMOverse/amico"
license = "MIT OR Apache-2.0"

[features]
default = []
openai = ["amico-models/openai"]
shell = ["amico-system/shell"]
fs = ["amico-runtime/fs"]

[dependencies]
# Re-export all layers
amico-models = { path = "../amico-models", version = "2.0.0" }
amico-system = { path = "../amico-system", version = "2.0.0" }
amico-runtime = { path = "../amico-runtime", version = "2.0.0" }
amico-plugin = { path = "../amico-plugin", version = "2.0.0" }
amico-workflows = { path = "../amico-workflows", version = "2.0.0" }

# Core async runtime
futures = "0.3"

[dev-dependencies]
tokio = { version = "1.44", features = ["rt", "macros"] }
