[package]
name = "core-macros"
version = "0.0.1"
edition = "2021"
description = "Procedural macros for the Amico AI Agent Framework"
repository = "https://github.com/AIMOverse/amico"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
proc-macro2 = "1.0"
toml = "0.8.19"
