[package]
name = "amico-auto-trait"
version = "0.0.1"
edition = "2024"
description = "Automatically generate dynamic-dispatchable and thread-local traits"
repository = "https://github.com/AIMOverse/amico"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
async-trait = { workspace = true }
proc-macro2 = "1.0.74"
quote = "1.0.40"
syn = { version = "2.0.101", features = ["full", "extra-traits"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "time"] }
