[package]
name = "agent-tui"
version = "0.1.0"
edition = "2021"
publish = false
description = "Example: TUI client for the local agent daemon"

[dependencies]
# Async runtime
tokio = { version = "1.44", features = ["full"] }
futures = "0.3"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
